# PrEW

./: .gitignore  CMakeLists.txt  Readme.md
macros/: compile.sh  load_env.sh
scripts/test/: test.xml
source/prew/: CMakeLists.txt
source/prew/include/: ChiSqMinimizer.h  FitBin.h  FitContainer.h  FitPar.h  MinuitFactory.h  ParConstrGauss.h  test.h
source/prew/include/Connect/: DataConnector.h  LinkHelp.h  Linker.h
source/prew/include/CppUtils/: Fct.h  Fnct.h  Map.h  Num.h  Num.tpp  Rnd.h  Root.h  Root.tpp  Str.h  Str.tpp  Sys.h  Vec.h  Vec.tpp
source/prew/include/Data/: BinCoord.h  CoefDistr.h  DiffDistr.h  Distr1D.h  DistrInfo.h  DistrUtils.h  DistrUtils.tpp  FctLink.h  FnctLink.h  PolLink.h  PredDistr.h  PredLink.h
source/prew/include/Fcts/: FctMap.h  ParametrisationFct.h  Physics.h  Polynomial.h  Statistic.h  Systematics.h
source/prew/include/Fit/: ChiSqMinimizer.h  FitBin.h  FitContainer.h  FitPar.h  FitResult.h  FitResult.tpp  MinuitFactory.h  ParConstrGauss.h  PoissonNLLMinimizer.h
source/prew/include/Fncts/: FnctMap.h  Physics.h  Polynomial.h  Statistic.h
source/prew/include/GlobalVar/: Chiral.h
source/prew/include/Input/: CSVInterpreter.h  CSVMetadata.h  CSVMetadata.tpp  DataReader.h  InfoRKFile.h  InputInfo.h  Reading.h  XMLReader.h
source/prew/include/Output/: Printer.h
source/prew/include/ToyMeas/: Flct.h  ParFlct.h  ToyGen.h  ToyGenerator.h
source/prew/src/: ChiSqMinimizer.cpp  FitBin.cpp  FitPar.cpp  MinuitFactory.cpp  ParConstrGauss.cpp  main.cpp  test.cpp
source/prew/src/Connect/: DataConnector.cpp  LinkHelp.cpp  Linker.cpp
source/prew/src/CppUtils/: Num.cpp  Rnd.cpp  Str.cpp  Sys.cpp
source/prew/src/Data/: BinCoord.cpp  CoefDistr.cpp  DistrInfo.cpp  DistrUtils.cpp  PolLink.cpp
source/prew/src/Fcts/: Physics.cpp  Polynomial.cpp  Statistic.cpp  Systematics.cpp
source/prew/src/Fit/: ChiSqMinimizer.cpp  FitBin.cpp  FitPar.cpp  FitResult.cpp  MinuitFactory.cpp  ParConstrGauss.cpp  PoissonNLLMinimizer.cpp
source/prew/src/Fncts/: Physics.cpp  Polynomial.cpp  Statistic.cpp
source/prew/src/GlobalVar/: Chiral.cpp
source/prew/src/Input/: CSVInterpreter.cpp  CSVMetadata.cpp  DataReader.cpp  Reading.cpp  XMLReader.cpp
source/prew/src/Output/: Printer.cpp
source/prew/src/ToyMeas/: Flct.cpp  ParFlct.cpp  ToyGen.cpp  ToyGenerator.cpp
source/prew/src/_test/: test.cpp
source/prout/: PrOut.py  Readme.md  setup.cfg
source/prout/IO/: Markers.py  Readers.py  Results.py
source/tests/: CMakeLists.txt  test_ChiSqMinimizer.cpp  test_FitBin.cpp  test_FitPar.cpp  test_MinuitFactory.cpp  test_ParConstrGauss.cpp  test_test.cpp
source/tests/Connect/: test_DataConnector.cpp  test_LinkHelp.cpp  test_Linker.cpp
source/tests/CppUtils/: test_Num.cpp  test_Rnd.cpp  test_Root.cpp  test_Str.cpp  test_Sys.cpp  test_Vec.cpp
source/tests/Data/: test_BinCoord.cpp  test_CoefDistr.cpp  test_DistrInfo.cpp  test_DistrUtils.cpp  test_PolLink.cpp
source/tests/Fcts/: test_Physics.cpp  test_Polynomial.cpp  test_Statistic.cpp  test_Systematics.cpp
source/tests/Fit/: test_ChiSqMinimizer.cpp  test_FitBin.cpp  test_FitPar.cpp  test_FitResult.cpp  test_MinuitFactory.cpp  test_ParConstrGauss.cpp  test_PoissonNLLMinimizer.cpp
source/tests/Fncts/: test_Physics.cpp  test_Polynomial.cpp  test_Statistic.cpp  test_Systematics.cpp
source/tests/GlobalVar/: test_Chiral.cpp
source/tests/Input/: test_CSVInterpreter.cpp  test_CSVMetadata.cpp  test_DataReader.cpp  test_InputInfo.cpp  test_Reading.cpp  test_XMLReader.cpp
source/tests/Output/: test_Printer.cpp
source/tests/ToyMeas/: test_Flct.cpp  test_ParFlct.cpp  test_ToyGen.cpp  test_ToyGenerator.cpp
source/tests/_test/: test_test.cpp
testdata/: test.csv  test_without_header.csv
