[metadata]
# replace with your username:
name = PrOut-beyerja
version = 0.0.1
author = Jakob Beyer
author_email = jakob.beyer@desy.de
description = Package to read and analyse PrEW fit data
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/beyerja/PrEW
project_urls =
    Bug Tracker = https://github.com/beyerja/PrEW/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8